# where_to_go

./: .gitignore  README.md  pyproject.toml
places/: admin.py  models.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_alter_place_imgs.py  0003_alter_place_imgs.py  0004_alter_place_imgs.py  0005_alter_place_imgs.py  0006_alter_place_imgs.py  0007_remove_place_imgs_image.py  0008_image_position.py  0009_image_unique_position_per_place.py  0010_alter_image_options_alter_place_options_and_more.py  0011_alter_place_description_long_and_more.py  0012_rename_description_long_place_long_description_and_more.py  0013_alter_place_long_description_and_more.py  0014_alter_place_long_description_and_more.py  0015_alter_image_options_and_more.py
templates/: index.html
where_to_go/: settings.py  urls.py
