[project]
name = "where-to-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "django>=5.2.8",
    "django-admin-sortable2>=2.2.8",
    "django-tinymce>=5.0.0",
    "environs>=14.5.0",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]
